# softbivpt

./: .gitignore  CMakeLists.txt  readme.md
build-old/: CMakeCache.txt  Makefile  cmake_install.cmake
build-old2/: CMakeCache.txt  Makefile  PathTracing  cmake_install.cmake
resource/: scene.mtl  scene.sce  scene1.mtl  scene2.mtl  scene3.mtl  scene3.sce  scene4.mtl  scene4.sce  scene5.mtl  scene5.sce
src/: bidir_pt.cpp  bidir_pt.h  image.h  main.cpp  material_bdrf.h  pt.cpp  pt.h  ray.h  renderer.h  scene.cpp  scene.h  scene_reader.h  shape.h  sphere.h  tiny_obj_loader.h  triangle.h  vector.h
